trybuild_tests/tests/trybuild/fail/model_no_pk.stderr
error: custom attribute panicked
 --> tests/trybuild/fail/model_no_pk.rs:4:1
  |
4 | #[model]
  | ^^^^^^^^
  |
  = help: message: No primary key found. Expected 'id' field or field with #[pk] attribute.
